# smartpull

./: .gitignore  Dockerfile  LICENSE  Modelfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
smartpull/: cli.py  core.py  hardware.py  matrix.py  modelfile_gen.py
smartpull.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smartpull.py
